/*
Copyright 2023 Google LLC

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    https://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

package sapagent.protos.yamlpbtest;

option go_package = "github.com/GoogleCloudPlatform/sapagent/protos/yamlpbtest";

enum TestEnum {
  VAL_UNSPECIFIED = 0;
  VAL_ONE = 1;
  VAL_TWO = 2;
}

message NestedTestMessage {
  uint32 uint32_v = 1;
}

message OtherNestedTestMessage {
  string string_v = 1;
}

message TestMessage {
  uint32 uint32_v = 1;
  float float_v = 2;
  string string_v = 3;
  bool bool_v = 4;
  TestEnum enum_v = 5;
  NestedTestMessage nested_v = 6;
  repeated uint32 uint32_r = 7;
  repeated NestedTestMessage nested_r = 8;
}
